tests/data/placebo/test_rds_vpc_query/rds.DescribeDBInstances_2.json
{
    "status_code": 200,
    "data": {
        "DBInstances": [
            {
                "DBInstanceIdentifier": "terraform-20210706053746759900000001",
                "DBInstanceClass": "db.t2.micro",
                "Engine": "mysql",
                "DBInstanceStatus": "available",
                "MasterUsername": "root",
                "DBName": "custodian081green",
                "Endpoint": {
                    "Address": "terraform-20210706053746759900000001.chhajgiktbgu.us-east-1.rds.amazonaws.com",
                    "Port": 3306,
                    "HostedZoneId": "Z2R2ITUGPM61AM"
                },
                "AllocatedStorage": 20,
                "InstanceCreateTime": {
                    "__class__": "datetime",
                    "year": 2021,
                    "month": 7,
                    "day": 6,
                    "hour": 5,
                    "minute": 41,
                    "second": 59,
                    "microsecond": 840000
                },
                "PreferredBackupWindow": "04:08-04:38",
                "BackupRetentionPeriod": 0,
                "DBSecurityGroups": [],
                "VpcSecurityGroups": [
                    {
                        "VpcSecurityGroupId": "sg-0a7bcb0f84852b7b0",
                        "Status": "active"
                    }
                ],
                "DBParameterGroups": [
                    {
                        "DBParameterGroupName": "default.mysql5.7",
                        "ParameterApplyStatus": "in-sync"
                    }
                ],
                "AvailabilityZone": "us-east-1c",
                "DBSubnetGroup": {
                    "DBSubnetGroupName": "default",
                    "DBSubnetGroupDescription": "default",
                    "VpcId": "vpc-ad9744d0",
                    "SubnetGroupStatus": "Complete",
                    "Subnets": [
                        {
                            "SubnetIdentifier": "subnet-8158d8de",
                            "SubnetAvailabilityZone": {
                                "Name": "us-east-1a"
                            },
                            "SubnetOutpost": {},
                            "SubnetStatus": "Active"
                        },
                        {
                            "SubnetIdentifier": "subnet-5264af63",
                            "SubnetAvailabilityZone": {
                                "Name": "us-east-1e"
                            },
                            "SubnetOutpost": {},
                            "SubnetStatus": "Active"
                        },
                        {
                            "SubnetIdentifier": "subnet-b045c2d6",
                            "SubnetAvailabilityZone": {
                                "Name": "us-east-1b"
                            },
                            "SubnetOutpost": {},
                            "SubnetStatus": "Active"
                        },
                        {
                            "SubnetIdentifier": "subnet-247c052a",
                            "SubnetAvailabilityZone": {
                                "Name": "us-east-1f"
                            },
                            "SubnetOutpost": {},
                            "SubnetStatus": "Active"
                        },
                        {
                            "SubnetIdentifier": "subnet-fa9dcab7",
                            "SubnetAvailabilityZone": {
                                "Name": "us-east-1d"
                            },
                            "SubnetOutpost": {},
                            "SubnetStatus": "Active"
                        },
                        {
                            "SubnetIdentifier": "subnet-cd7af8ec",
                            "SubnetAvailabilityZone": {
                                "Name": "us-east-1c"
                            },
                            "SubnetOutpost": {},
                            "SubnetStatus": "Active"
                        }
                    ]
                },
                "PreferredMaintenanceWindow": "sun:07:57-sun:08:27",
                "PendingModifiedValues": {},
                "MultiAZ": false,
                "EngineVersion": "5.7.26",
                "AutoMinorVersionUpgrade": true,
                "ReadReplicaDBInstanceIdentifiers": [],
                "LicenseModel": "general-public-license",
                "OptionGroupMemberships": [
                    {
                        "OptionGroupName": "default:mysql-5-7",
                        "Status": "in-sync"
                    }
                ],
                "PubliclyAccessible": false,
                "StorageType": "gp2",
                "DbInstancePort": 0,
                "StorageEncrypted": false,
                "DbiResourceId": "db-VG6SF5EPSHITOBXLCBEIJHVYGI",
                "CACertificateIdentifier": "rds-ca-2019",
                "DomainMemberships": [],
                "CopyTagsToSnapshot": false,
                "MonitoringInterval": 0,
                "DBInstanceArn": "arn:aws:rds:us-east-1:644160558196:db:terraform-20210706053746759900000001",
                "IAMDatabaseAuthenticationEnabled": false,
                "PerformanceInsightsEnabled": false,
                "DeletionProtection": false,
                "AssociatedRoles": [],
                "TagList": []
            },
            {
                "DBInstanceIdentifier": "terraform-20210706053826545200000001",
                "DBInstanceClass": "db.t2.micro",
                "Engine": "mysql",
                "DBInstanceStatus": "available",
                "MasterUsername": "root",
                "DBName": "custodian081red",
                "Endpoint": {
                    "Address": "terraform-20210706053826545200000001.chhajgiktbgu.us-east-1.rds.amazonaws.com",
                    "Port": 3306,
                    "HostedZoneId": "Z2R2ITUGPM61AM"
                },
                "AllocatedStorage": 20,
                "InstanceCreateTime": {
                    "__class__": "datetime",
                    "year": 2021,
                    "month": 7,
                    "day": 6,
                    "hour": 5,
                    "minute": 43,
                    "second": 15,
                    "microsecond": 391000
                },
                "PreferredBackupWindow": "07:25-07:55",
                "BackupRetentionPeriod": 0,
                "DBSecurityGroups": [],
                "VpcSecurityGroups": [
                    {
                        "VpcSecurityGroupId": "sg-094c46e358fea4558",
                        "Status": "active"
                    }
                ],
                "DBParameterGroups": [
                    {
                        "DBParameterGroupName": "default.mysql5.7",
                        "ParameterApplyStatus": "in-sync"
                    }
                ],
                "AvailabilityZone": "us-east-1a",
                "DBSubnetGroup": {
                    "DBSubnetGroupName": "default",
                    "DBSubnetGroupDescription": "default",
                    "VpcId": "vpc-ad9744d0",
                    "SubnetGroupStatus": "Complete",
                    "Subnets": [
                        {
                            "SubnetIdentifier": "subnet-8158d8de",
                            "SubnetAvailabilityZone": {
                                "Name": "us-east-1a"
                            },
                            "SubnetOutpost": {},
                            "SubnetStatus": "Active"
                        },
                        {
                            "SubnetIdentifier": "subnet-5264af63",
                            "SubnetAvailabilityZone": {
                                "Name": "us-east-1e"
                            },
                            "SubnetOutpost": {},
                            "SubnetStatus": "Active"
                        },
                        {
                            "SubnetIdentifier": "subnet-b045c2d6",
                            "SubnetAvailabilityZone": {
                                "Name": "us-east-1b"
                            },
                            "SubnetOutpost": {},
                            "SubnetStatus": "Active"
                        },
                        {
                            "SubnetIdentifier": "subnet-247c052a",
                            "SubnetAvailabilityZone": {
                                "Name": "us-east-1f"
                            },
                            "SubnetOutpost": {},
                            "SubnetStatus": "Active"
                        },
                        {
                            "SubnetIdentifier": "subnet-fa9dcab7",
                            "SubnetAvailabilityZone": {
                                "Name": "us-east-1d"
                            },
                            "SubnetOutpost": {},
                            "SubnetStatus": "Active"
                        },
                        {
                            "SubnetIdentifier": "subnet-cd7af8ec",
                            "SubnetAvailabilityZone": {
                                "Name": "us-east-1c"
                            },
                            "SubnetOutpost": {},
                            "SubnetStatus": "Active"
                        }
                    ]
                },
                "PreferredMaintenanceWindow": "sat:10:18-sat:10:48",
                "PendingModifiedValues": {},
                "MultiAZ": false,
                "EngineVersion": "5.7.26",
                "AutoMinorVersionUpgrade": true,
                "ReadReplicaDBInstanceIdentifiers": [],
                "LicenseModel": "general-public-license",
                "OptionGroupMemberships": [
                    {
                        "OptionGroupName": "default:mysql-5-7",
                        "Status": "in-sync"
                    }
                ],
                "PubliclyAccessible": false,
                "StorageType": "gp2",
                "DbInstancePort": 0,
                "StorageEncrypted": false,
                "DbiResourceId": "db-UB4OHXDLL2NN6POCSFP7EWFIUQ",
                "CACertificateIdentifier": "rds-ca-2019",
                "DomainMemberships": [],
                "CopyTagsToSnapshot": false,
                "MonitoringInterval": 0,
                "DBInstanceArn": "arn:aws:rds:us-east-1:644160558196:db:terraform-20210706053826545200000001",
                "IAMDatabaseAuthenticationEnabled": false,
                "PerformanceInsightsEnabled": false,
                "DeletionProtection": false,
                "AssociatedRoles": [],
                "TagList": []
            }
        ],
        "ResponseMetadata": {}
    }
}
